--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Nathan Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <table cellspacing="20">
-            <td><img src="Images/Nathan.png" height="200" alt="Nathan Profile Picture"></td>
-            <td><h1><a href="https://www.linkedin.com/in/nathan-lazzaro/">Nathan Lazzaro</a></h1>
+            <td><img src="Images/Nathan.png" alt="Nathan Profile Picture"></td>
+            <td><h1>Nathan Lazzaro</h1>
                 <p><em><strong>Nutricionista</strong></em></p>
                 <p>Nutricionista e Gastrólogo</p>
                 <a href="contact.html">Contato</a>
