--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Contact Nathan</title>
+        <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
         <h3>Celular</h3>
+        <h3><a href="https://www.linkedin.com/in/nathan-lazzaro/">Linkedin</a></h3>
         <p><a href="https://web.whatsapp.com/">+5511934317406</a></p>
         <hr>
         <form action="mailto:rplazzaro@hotmail.com" method="post" enctype="text/plain">
